[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.0",
    "matplotlib>=3.10.1",
    "mne>=1.9.0",
    "mne-connectivity>=0.7.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
